# metrical

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: .gitignore  README.md  pyproject.toml
src/.github/workflows/: ci.yml
src/metrical/: cli.py  core.py
tests/: test_core_imperial.py  test_core_metric.py
